	* apps/examples/lcdrw:  Fill out empty Kconfig file (2014-2-27).
	* apps/netutils/dhcpd/dhcpd.c:  The correct value of the PAD option
	  is zero, not one.  From Brennan Ashton (2014-3-31).
	* apps/sysinfo:   CONFIG_VERSION_BUILD is a string an needs to be
	  printed with %s, not %d.  Noted by Librae (2014-4-8).
	* apps/netutils/ntpclient/ and apps/include/netufils/ntpclient.h:  Add
	  a very primitive NTP client.  The initial check-in is untested and
	  probably incomplete (2014-4-10).
	* apps/netutils/resolv:  Long needed major clean up for coding style
	  and unification of naming conventions (resolv vs dns) (2014-4-11).
	* apps/netutils/dnsclient and include/netutils/dnsclient.h:  File name
	  changes that are part of the overal resolv->dns renaming (2014-4-11).
	* apps/netutils/dnsclient:  Break the one big monolithic file into
	  three smaller files (2014-4-11).
	* apps/netutils/ntpclient/ntpclient.c: Corrections to the NTP client
	  from Manuel Stuehn (2014-4-12).
	* apps/examples/touchscreen:  Add a configuration option to indicate if
	  architecture-specific initialized is required, yes or no (2014-4-14).
	* apps/system/nxplayer/nxplayer.c:  Compilation failure in one
	  configuration reported by Manuel Stuhn (2014-4-21).
	* apps/system/sdcard:  Remove an STM32 dependency.  From Bob Doiron
	  (2014-4-21).
	* apps/nshlib: malloc/free IOBUFFER for 'cat' and 'hexdump' commands
	  instead of using the stack.  From Bob Doiron (2014-4-21).
	* apps/examples/cpuhog, serialblaster, and serialrx:  Stress test
	  examples added by Bob Doiron (2014-4-22).
	* apps/examples/telnetd:  Naming is confused.  In someplaces 'telnetd',
	  and in others 'shell.'  All changes to telnetd.  Noted by Pelle
	  Windestam (2014-4-38).

7.3 2014-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* apps/examples/serialblaster:  Update configuration an make logic in
	  order to select that the serial blaster task priority and stack size.
	  From Bob Doiron (2014-4-30).