@@ -675,25 +675,62 @@ config NSH_USBDEV_TRACEINTERRUPTS
 
 endif # NSH_USBDEV_TRACE
 
-config NSH_CONDEV
-	string "Default console device"
-	default "/dev/console"
-	depends on NSH_CONSOLE && !NSH_USBCONSOLE
+config NSH_ALTCONDEV
+	bool "Alternative console device"
+	default n
+	depends on NSH_CONSOLE && !NSH_USBCONSOLE && !NSH_TELNET
 	---help---
-		If NSH_CONSOLE is set to 'y', then NSH_CONDEV
-		may also be set to select the serial device used to support
-		the NSH console.   This should be set to the quoted name of a
-		readable/write-able character driver such as:
-		NSH_CONDEV="/dev/ttyS1". This is useful, for example,
-		to separate the NSH command line from the system console when
-		the system console is used to provide debug output.  Default:
-		stdin and stdout (probably "/dev/console")
+		If CONFIG_NSH_CONSOLE is set to y, then CONFIG_NSH_ALTCONDEV may
+		also be selected to enable use of an alternate character device
+		to support the NSH console. If CONFIG_NSH_ALTCONDEV is selected,
+		then NSH_CONDEV must be set to select the serial device used to
+		support the NSH console.  This may be useful, for example, to
+		separate the NSH command line from the system console when the
+		system console is used to provide debug output.  Default: stdin
+		and stdout (probably "/dev/console")
 
-		NOTE: When any other device other than /dev/console is used
+		NOTE 1: When any other device other than /dev/console is used
 		for a user interface, (1) linefeeds (\n) will not be expanded to
 		carriage return / linefeeds (\r\n).  You will need to set
 		your terminal program to account for this.  And (2) input is
 		not automatically echoed so you will have to turn local echo on.
+
+		NOTE 2:  This option forces the console of all sessions to use
+		NSH_CONDEV.  Hence, this option only makes sense for a system
+		that supports only a single session.  This option is, in
+		particular, incompatible with Telnet sessions because each Telnet
+		session must use a different console device.
+
+if NSH_ALTCONDEV
+
+config NSH_CONDEV
+	string "Alternative console device name"
+	default "/dev/console"
+	---help---
+		If CONFIG_NSH_CONSOLE is set to y, then CONFIG_NSH_ALTCONDEV may
+		also be selected to enable use of an alternate character device
+		to support the NSH console. If CONFIG_NSH_ALTCONDEV is selected,
+		then NSH_CONDEV must be set to select the serial device used to
+		support the NSH console.   This should be set to the quoted name
+		of a readable/write-able character driver such as:
+		NSH_CONDEV="/dev/ttyS1".  This is useful, for example, to separate
+		the NSH command line from the system console when the system console
+		is used to provide debug output.  Default: stdin and stdout
+		(probably "/dev/console")
+
+		NOTE 1: When any other device other than /dev/console is used
+		for a user interface, (1) linefeeds (\n) will not be expanded to
+		carriage return / linefeeds (\r\n).  You will need to set
+		your terminal program to account for this.  And (2) input is
+		not automatically echoed so you will have to turn local echo on.
+
+		NOTE 2:  This option forces the console of all sessions to use
+		NSH_CONDEV.  Hence, this option only makes sense for a system
+		that supports only a single session.  This option is, in
+		particular, incompatible with Telnet sessions because each Telnet
+		session must use a different console device.
+
+endif # NSH_ALTCONDEV
 
 config NSH_ARCHINIT
 	bool "Have architecture-specific initialization"
